--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
-	    <version>5.1.15-bin</version>
+	    <version>5.1.15</version>
 	</dependency>
 	
   <dependency>
